--- a/login.html
+++ b/login.html
@@ -16,8 +16,9 @@
 
   <div id="user_div" class="loggedin-div">
     <h3>Welcome User</h3>
-    <p id="user_para">Welcome to Firebase web login Example. You're currently logged in.</p>
-    <button onclick="logout()">Logout</button>
+    <p>You're currently logged in.</p>
+    <button onclick="location.href = 'index_form.html';">Enter Patient Details</button><br>
+    <button onclick="logout()">Logout</button> 
   </div>
 
 
